/*
 * Copyright (C) 2016 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

option java_package = "com.google.android.apps.nexuslauncher.search";
option java_outer_classname = "SearchProto";

package search;

message Columns {
  optional int32 edgeMargin = 1;
  optional int32 innerMargin = 2;
  optional int32 iconDistance = 3;
  optional int32 height = 4;
}

message AppIndex {
  optional string label = 1;
  optional string predictionRank = 2;
  optional string iconBitmap = 3;
  optional string searchUri = 4;
}

message SearchBase {
  optional int32 bgColor = 1;
  optional string iconViewTemplate = 2;
  optional string iconLongClick = 3;
  optional Columns apps = 4;
  optional int32 allAppsCols = 5;
  repeated AppIndex index = 6;
  optional Columns bounds = 7;
  optional string searchTemplate = 8;
  optional int32 gIcon = 9;
  optional int32 micIcon = 10;
  optional string view = 11;
  optional Columns viewBounds = 12;
  optional bool isAllApps = 13;
  optional Columns appsView = 14;
  optional bool isDark = 15;
}

message SearchView {
  optional SearchBase base = 1;
}
